--- a/public/indoor-viewer.html
+++ b/public/indoor-viewer.html
@@ -28,77 +28,27 @@
     <script src="https://cdn.jsdelivr.net/npm/jspanel4@4.15.0/dist/extensions/contextmenu/jspanel.contextmenu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspanel4@4.15.0/dist/extensions/dock/jspanel.dock.js"></script>
 
-    <!-- Demo styles -->
-    <link href="./stylesheets/demo.css" rel="stylesheet" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    />
+    <!-- Custom level bar styles -->
+    <link rel="stylesheet" href="./styles/level-bar.css" />
+    <!-- Z-clipping bar styles -->
+    <link rel="stylesheet" href="./styles/z-clipping-bar.css" />
+    <!-- Fullscreen fix for Cesium viewer and UI -->
+    <link rel="stylesheet" href="./styles/fullscreen.css" />
   </head>
 
   <body>
     <div id="cesiumContainer" class="fullSize"></div>
     <div id="toolbar">
-      <div id="globalControls" class="infoPanel">
-        <div class="control-header">Global Controls</div>
-        <div class="z-clipping-control">
-          <label for="z-clipping-slider">Venue/MTR Z-Clipping (m):</label>
-          <div class="slider-container">
-            <input
-              type="range"
-              id="z-clipping-slider"
-              min="-50"
-              max="200"
-              value="200"
-              step="0.1"
-            />
-            <span id="z-clipping-value">200.0</span>
-          </div>
-          <div class="slider-labels">
-            <span>-50m</span>
-            <span>200m</span>
-          </div>
-        </div>
-        <div class="z-clipping-control">
-          <label for="indoor-network-clipping-slider"
-            >Indoor Network Z-Clipping:</label
-          >
-          <div class="slider-container">
-            <input
-              type="range"
-              id="indoor-network-clipping-slider"
-              min="-50"
-              max="200"
-              value="200"
-              step="0.1"
-            />
-            <span id="indoor-network-clipping-value">200.0</span>
-          </div>
-          <div class="slider-labels">
-            <span>-50</span>
-            <span>200</span>
-          </div>
-        </div>
-        <div class="z-clipping-control">
-          <label for="mtr-network-clipping-slider"
-            >MTR Network Z-Clipping:</label
-          >
-          <div class="slider-container">
-            <input
-              type="range"
-              id="mtr-network-clipping-slider"
-              min="-50"
-              max="200"
-              value="200"
-              step="0.1"
-            />
-            <span id="mtr-network-clipping-value">200.0</span>
-          </div>
-          <div class="slider-labels">
-            <span>-50</span>
-            <span>200</span>
-          </div>
-        </div>
-      </div>
+      <div id="levelBarContainer" class="level-bar-bootstrap"></div>
       <div id="venueOption"></div>
     </div>
-    <!-- Main application script (ES6 module) -->
-    <script type="module" src="./js/demo-main.js"></script>
+    <div id="zClippingBarContainer"></div>
+    <!-- App bootstrapping script -->
+    <script type="module" src="./js/indoor-viewer-init.js"></script>
   </body>
 </html>
