--- a/public/indoor-viewer.html
+++ b/public/indoor-viewer.html
@@ -17,6 +17,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
     <!-- Custom level bar styles -->
     <link rel="stylesheet" href="./styles/level-bar.css" />
     <!-- Z-clipping bar styles -->
