add legend on the right sid

--- a/public/indoor-viewer.html
+++ b/public/indoor-viewer.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="./styles/level-bar.css" />
     <!-- Z-clipping bar styles -->
     <link rel="stylesheet" href="./styles/z-clipping-bar.css" />
+    <!-- Sidebar styles -->
+    <link rel="stylesheet" href="./styles/sidebar.css" />
     <!-- Fullscreen fix for Cesium viewer and UI -->
     <link rel="stylesheet" href="./styles/fullscreen.css" />
   </head>
