added 3D view state control

--- a/public/indoor-viewer.html
+++ b/public/indoor-viewer.html
@@ -36,6 +36,10 @@
       <div id="venueOption"></div>
     </div>
     <div id="zClippingBarContainer"></div>
+
+    <!-- Debug tools (only in development) -->
+    <script src="./js/testing/debug-view-switching.js"></script>
+
     <!-- App bootstrapping script -->
     <script type="module" src="./js/indoor-viewer-init.js"></script>
   </body>
