--- a/public/login.html
+++ b/public/login.html
@@ -54,7 +54,7 @@
     <div class="login-container">
       <h2>Login</h2>
       <form id="loginForm" method="post" autocomplete="off">
-        <input type="hidden" name="_csrf" id="csrfTokenInput" value="" />
+        <input type="hidden" name="" id="csrfTokenInput" value="" />
         <div class="error" id="errorMsg" style="display: none"></div>
         <label for="userName">Username</label>
         <input
