add wheelchair barriers colour control for pedestrain

--- a/public/html/z-clipping-bar.html
+++ b/public/html/z-clipping-bar.html
@@ -1,5 +1,23 @@
 <!-- 3D Buildings Opacity Control -->
 <div class="opacity-control-container">
+  <!-- Wheelchair Barrier Toggle -->
+  <div
+    class="barrier-control"
+    style="
+      margin-bottom: 15px;
+      padding-bottom: 15px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    "
+  >
+    <div class="control-header">
+      <span class="control-label">Wheelchair Barriers</span>
+      <label class="switch">
+        <input type="checkbox" id="barrier-toggle" />
+        <span class="slider round"></span>
+      </label>
+    </div>
+  </div>
+
   <div class="opacity-control">
     <div class="control-header">
       <span class="control-label">3D Buildings Opacity</span>
